--- a/src/process.ipynb
+++ b/src/process.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "# Đọc dữ liệu từ file CSV\n",
-    "file_path = 'lyric.csv'\n",
+    "file_path = 'data/lyric.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Xác định cột chứa lời bài hát\n",
@@ -65,7 +65,7 @@
     "X_tfidf = tfidf_vectorizer.fit_transform(df['lyric'])\n",
     "\n",
     "# Lưu TF-IDF vectorizer\n",
-    "tfidf_vectorizer_path = 'tfidf_vectorizer.pkl'\n",
+    "tfidf_vectorizer_path = 'model/tfidf_vectorizer.pkl'\n",
     "joblib.dump(tfidf_vectorizer, tfidf_vectorizer_path)\n",
     "print(f\"TF-IDF Vectorizer đã được lưu tại: {tfidf_vectorizer_path}\")\n",
     "\n",
@@ -78,7 +78,7 @@
     "X_lsa = lsa.fit_transform(X_tfidf)\n",
     "\n",
     "# Lưu mô hình LDA\n",
-    "lsa_model_path = 'lda_model.pkl'\n",
+    "lsa_model_path = 'model/lda_model.pkl'\n",
     "joblib.dump(lsa, lsa_model_path)\n",
     "print(f\"LDA Model đã được lưu tại: {lsa_model_path}\")\n",
     "\n",
@@ -91,7 +91,7 @@
     "df_tfidf_lsa['label'] = df['label']\n",
     "\n",
     "# Lưu dữ liệu đã xử lý vào file CSV\n",
-    "output_path = 'tfidf_lsa_lyric.csv'\n",
+    "output_path = 'data/tfidf_lsa_lyric.csv'\n",
     "df_tfidf_lsa.to_csv(output_path, index=False)\n",
     "print(f\"Dữ liệu TF-IDF và LSA đã được lưu tại: {output_path}\")"
    ]
@@ -301,7 +301,7 @@
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
     "# Đọc dữ liệu từ file CSV\n",
-    "file_path = 'tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
+    "file_path = 'data/tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
     "\n",
     "try:\n",
     "    df_tfidf_lsa = pd.read_csv(file_path)\n",
@@ -410,7 +410,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
-    "data = pd.read_csv('tfidf_lsa_lyric.csv')\n",
+    "data = pd.read_csv('data/tfidf_lsa_lyric.csv')\n",
     "data = data.dropna()\n",
     "# Tách dữ liệu thành features và labels\n",
     "X = data.drop(columns=['label'])\n",
@@ -434,7 +434,7 @@
     "\n",
     "# Lưu mô hình nếu cần thiết\n",
     "import joblib\n",
-    "model_path = 'random_forest_model.pkl'\n",
+    "model_path = 'model/random_forest_model.pkl'\n",
     "joblib.dump(rf_model, model_path)\n",
     "print(f\"Mô hình đã được lưu tại: {model_path}\")\n"
    ]
@@ -468,7 +468,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "model_path = 'random_forest_model.pkl'\n",
+    "model_path = 'model/random_forest_model.pkl'\n",
     "best_rf = joblib.load(model_path)\n",
     "print(\"Mô hình đã được tải thành công.\")\n",
     "\n",
@@ -481,7 +481,7 @@
     "\n",
     "\n",
     "# Chuyển văn bản thành vector TF-IDF\n",
-    "tfidf_vectorizer = joblib.load('tfidf_vectorizer.pkl')\n",
+    "tfidf_vectorizer = joblib.load('model/tfidf_vectorizer.pkl')\n",
     "\n",
     "new_tfidf = tfidf_vectorizer.transform(df_test['lyric'])\n",
     "\n",
@@ -489,7 +489,7 @@
     "print(\"Shape of TF-IDF matrix:\", new_tfidf.shape)\n",
     "\n",
     "# Giảm chiều dữ liệu bằng LSA (SVD)\n",
-    "lda_model = joblib.load('lda_model.pkl')\n",
+    "lda_model = joblib.load('model/lda_model.pkl')\n",
     "\n",
     "new_lda = lda_model.transform(new_tfidf)\n",
     "print(new_lda.shape)\n",
