update process code

--- a/src/process.ipynb
+++ b/src/process.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TF-IDF Vectorizer đã được lưu tại: tfidf_vectorizer.pkl\n",
+      "TF-IDF Vectorizer đã được lưu tại: ../model/tfidf_vectorizer.pkl\n",
       "Shape of TF-IDF matrix: (978, 5000)\n",
-      "LDA Model đã được lưu tại: lda_model.pkl\n",
+      "LDA Model đã được lưu tại: ../model/lda_model.pkl\n",
       "Shape of LSA-transformed matrix: (978, 100)\n",
-      "Explained variance ratio: 0.40695260267538197\n",
-      "Dữ liệu TF-IDF và LSA đã được lưu tại: tfidf_lsa_lyric.csv\n"
+      "Explained variance ratio: 0.40702860218196746\n",
+      "Dữ liệu TF-IDF và LSA đã được lưu tại: ../data/tfidf_lsa_lyric.csv\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "# Đọc dữ liệu từ file CSV\n",
-    "file_path = 'data/lyric.csv'\n",
+    "file_path = '../data/lyric.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Xác định cột chứa lời bài hát\n",
@@ -59,13 +59,15 @@
     "df.columns = ['index','name_song','lyric','label']\n",
     "df.drop(['index'], axis=1,inplace=True)\n",
     "\n",
+    "processed_path = '../data/processed_data.csv'\n",
+    "df.to_csv(processed_path, index = False)\n",
     "\n",
     "# Chuyển văn bản thành vector TF-IDF\n",
     "tfidf_vectorizer = TfidfVectorizer(max_features=5000)  # Bạn có thể điều chỉnh số lượng đặc trưng\n",
     "X_tfidf = tfidf_vectorizer.fit_transform(df['lyric'])\n",
     "\n",
     "# Lưu TF-IDF vectorizer\n",
-    "tfidf_vectorizer_path = 'model/tfidf_vectorizer.pkl'\n",
+    "tfidf_vectorizer_path = '../model/tfidf_vectorizer.pkl'\n",
     "joblib.dump(tfidf_vectorizer, tfidf_vectorizer_path)\n",
     "print(f\"TF-IDF Vectorizer đã được lưu tại: {tfidf_vectorizer_path}\")\n",
     "\n",
@@ -78,7 +80,7 @@
     "X_lsa = lsa.fit_transform(X_tfidf)\n",
     "\n",
     "# Lưu mô hình LDA\n",
-    "lsa_model_path = 'model/lda_model.pkl'\n",
+    "lsa_model_path = '../model/lda_model.pkl'\n",
     "joblib.dump(lsa, lsa_model_path)\n",
     "print(f\"LDA Model đã được lưu tại: {lsa_model_path}\")\n",
     "\n",
@@ -91,7 +93,7 @@
     "df_tfidf_lsa['label'] = df['label']\n",
     "\n",
     "# Lưu dữ liệu đã xử lý vào file CSV\n",
-    "output_path = 'data/tfidf_lsa_lyric.csv'\n",
+    "output_path = '../data/tfidf_lsa_lyric.csv'\n",
     "df_tfidf_lsa.to_csv(output_path, index=False)\n",
     "print(f\"Dữ liệu TF-IDF và LSA đã được lưu tại: {output_path}\")"
    ]
@@ -301,7 +303,7 @@
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
     "# Đọc dữ liệu từ file CSV\n",
-    "file_path = 'data/tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
+    "file_path = '../data/tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
     "\n",
     "try:\n",
     "    df_tfidf_lsa = pd.read_csv(file_path)\n",
@@ -362,46 +364,33 @@
     "\n",
     "# Lưu mô hình tốt nhất nếu cần thiết\n",
     "import joblib\n",
-    "model_path = 'best_randomforest_model.pkl'\n",
+    "model_path = '../model/best_randomforest_model.pkl'\n",
     "joblib.dump(best_rf, model_path)\n",
     "print(f\"Mô hình tốt nhất đã được lưu tại: {model_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.609375\n",
+      "Accuracy: 0.6302083333333334\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        buồn       0.57      0.80      0.67        64\n",
-      "   nhớ nhung       0.00      0.00      0.00         6\n",
-      "         vui       0.67      0.69      0.68        51\n",
-      "  yêu thương       0.61      0.44      0.51        71\n",
+      "        buồn       0.59      0.75      0.66        68\n",
+      "         vui       0.68      0.75      0.71        51\n",
+      "  yêu thương       0.65      0.44      0.52        73\n",
       "\n",
-      "    accuracy                           0.61       192\n",
-      "   macro avg       0.46      0.48      0.46       192\n",
-      "weighted avg       0.59      0.61      0.59       192\n",
+      "    accuracy                           0.63       192\n",
+      "   macro avg       0.64      0.64      0.63       192\n",
+      "weighted avg       0.64      0.63      0.62       192\n",
       "\n",
-      "Mô hình đã được lưu tại: random_forest_model.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\acer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "C:\\Users\\acer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "C:\\Users\\acer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+      "Mô hình đã được lưu tại: ../model/random_forest_model.pkl\n"
      ]
     }
    ],
@@ -410,7 +399,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
-    "data = pd.read_csv('data/tfidf_lsa_lyric.csv')\n",
+    "data = pd.read_csv('../data/tfidf_lsa_lyric.csv')\n",
     "data = data.dropna()\n",
     "# Tách dữ liệu thành features và labels\n",
     "X = data.drop(columns=['label'])\n",
@@ -434,14 +423,14 @@
     "\n",
     "# Lưu mô hình nếu cần thiết\n",
     "import joblib\n",
-    "model_path = 'model/random_forest_model.pkl'\n",
+    "model_path = '../model/random_forest_model.pkl'\n",
     "joblib.dump(rf_model, model_path)\n",
     "print(f\"Mô hình đã được lưu tại: {model_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +440,7 @@
       "Mô hình đã được tải thành công.\n",
       "Shape of TF-IDF matrix: (1, 5000)\n",
       "(1, 100)\n",
-      "Cảm xúc dự đoán của bài hát : vui\n"
+      "Cảm xúc dự đoán của bài hát : yêu thương\n"
      ]
     },
     {
@@ -468,12 +457,12 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "model_path = 'model/random_forest_model.pkl'\n",
+    "model_path = '../model/random_forest_model.pkl'\n",
     "best_rf = joblib.load(model_path)\n",
     "print(\"Mô hình đã được tải thành công.\")\n",
     "\n",
     "    \n",
-    "df_test = pd.DataFrame([[1001,'Buồn','''nhớ nhớ nhớ''']], columns=['index','name_song', 'lyric'])\n",
+    "df_test = pd.DataFrame([[1001,'Buồn','''yêu yêu yêu''']], columns=['index','name_song', 'lyric'])\n",
     "\n",
     "df_test['lyric'] = df_test['lyric'].astype(str).apply(clean_text)\n",
     "df_test.columns = ['index','name_song','lyric']\n",
@@ -481,7 +470,7 @@
     "\n",
     "\n",
     "# Chuyển văn bản thành vector TF-IDF\n",
-    "tfidf_vectorizer = joblib.load('model/tfidf_vectorizer.pkl')\n",
+    "tfidf_vectorizer = joblib.load('../model/tfidf_vectorizer.pkl')\n",
     "\n",
     "new_tfidf = tfidf_vectorizer.transform(df_test['lyric'])\n",
     "\n",
@@ -489,7 +478,7 @@
     "print(\"Shape of TF-IDF matrix:\", new_tfidf.shape)\n",
     "\n",
     "# Giảm chiều dữ liệu bằng LSA (SVD)\n",
-    "lda_model = joblib.load('model/lda_model.pkl')\n",
+    "lda_model = joblib.load('../model/lda_model.pkl')\n",
     "\n",
     "new_lda = lda_model.transform(new_tfidf)\n",
     "print(new_lda.shape)\n",
