update train_test_split function

--- a/src/process.ipynb
+++ b/src/process.ipynb
@@ -200,45 +200,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                             name_song  \\\n",
-      "0    Nắng Có Còn Xuân & Xuân Đẹp Làm Sao & ...   \n",
-      "1                       Hoa Cỏ Mùa Xuân & Khá Khen   \n",
-      "2                    Đón Xuân & 60 Năm Cuộc Đời   \n",
-      "3                  Gái Xuân & Tình Yêu Màu Nắng   \n",
-      "4                                 Cầu Vừa Đủ Xài   \n",
-      "..                                                 ...   \n",
-      "973                                           treasure   \n",
-      "974                           không sao mà, em đây rồi   \n",
-      "975                                            ngỏ lời   \n",
-      "976                                           tình đầu   \n",
-      "977                      xe anh đến đâu em theo đến đó   \n",
-      "\n",
-      "                                                 lyric       label  \n",
-      "0    mùa xuân ta mùa xuân hát kia trời đồi núi xanh...         vui  \n",
-      "1    cỏ non mềm mùa xuân hiền hoa thơm giọt sương t...         vui  \n",
-      "2    xuân gieo rắc ngàn hồn hoa đời vui bình minh m...         vui  \n",
-      "3    gái xuân trắng thân lấm bụi trần xuân hoa mơ h...         vui  \n",
-      "4    cầu sức khỏe vươn sống vui vẻ lạc quan cầu bố ...         vui  \n",
-      "..                                                 ...         ...  \n",
-      "973  vui phút tan đêm đừng lo mai thời gian buông t...         vui  \n",
-      "974  hình say hình vui đi buồn khóc khóc vai đừng m...  yêu thương  \n",
-      "975  tích tóc tích tóc kim đồng hồ mơ phiêu dạt yêu...  yêu thương  \n",
-      "976  vụng nỗi tương tư đầu tiên ánh mắt e ngại tim ...  yêu thương  \n",
-      "977  ước ước bao rời lỡ đau ngủ đêm mai quên đời só...        buồn  \n",
-      "\n",
-      "[978 rows x 3 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df)\n"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def stratified_train_test_split(data, label_col, test_size=0.2, random_state=None):\n",
+    "    # Kiểm tra sự tồn tại của cột nhãn\n",
+    "    if label_col not in data.columns:\n",
+    "        raise ValueError(f\"Cột '{label_col}' không tồn tại trong dữ liệu.\")\n",
+    "    \n",
+    "    # Thiết lập giá trị random seed nếu cần\n",
+    "    if random_state is not None:\n",
+    "        np.random.seed(random_state)\n",
+    "    \n",
+    "    # Lấy danh sách các nhãn và tỷ lệ của chúng\n",
+    "    label_counts = data[label_col].value_counts(normalize=True)\n",
+    "    \n",
+    "    # Tạo danh sách các chỉ số của tập dữ liệu\n",
+    "    indices = data.index.tolist()\n",
+    "    \n",
+    "    # Khởi tạo danh sách cho các chỉ số của train và test\n",
+    "    train_indices = []\n",
+    "    test_indices = []\n",
+    "    \n",
+    "    # Chia dữ liệu theo tỷ lệ nhãn\n",
+    "    for label, proportion in label_counts.items():\n",
+    "        # Lấy các chỉ số của mẫu có nhãn tương ứng\n",
+    "        label_indices = data[data[label_col] == label].index.tolist()\n",
+    "        \n",
+    "        # Xác định số lượng mẫu cần thiết cho tập test\n",
+    "        test_count = int(len(label_indices) * test_size)\n",
+    "        \n",
+    "        # Xáo trộn chỉ số của nhãn này\n",
+    "        np.random.shuffle(label_indices)\n",
+    "        \n",
+    "        # Tách ra tập train và test\n",
+    "        test_indices += label_indices[:test_count]\n",
+    "        train_indices += label_indices[test_count:]\n",
+    "    \n",
+    "    # Lấy tập dữ liệu train và test\n",
+    "    train_data = data.loc[train_indices]\n",
+    "    test_data = data.loc[test_indices]\n",
+    "    \n",
+    "    # Lưu dữ liệu ra file CSV\n",
+    "    train_data.to_csv('../data/train_data.csv', index=False)\n",
+    "    test_data.to_csv('../data/test_data.csv', index=False)\n",
+    "    \n",
+    "    return train_data, test_data\n",
+    "\n",
+    "# Đọc dữ liệu từ file CSV\n",
+    "file_path = '../data/tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
+    "\n",
+    "try:\n",
+    "    df_tfidf_lsa = pd.read_csv(file_path)\n",
+    "except FileNotFoundError:\n",
+    "    print(\"File không tồn tại. Vui lòng kiểm tra đường dẫn.\")\n",
+    "    exit()\n",
+    "\n",
+    "# Tách dữ liệu thành train và test\n",
+    "train_df, test_df = stratified_train_test_split(\n",
+    "    data=df_tfidf_lsa,\n",
+    "    label_col='label',  # Đảm bảo cột 'label' đã tồn tại\n",
+    "    test_size=0.2,\n",
+    "    random_state=42\n",
+    ")"
    ]
   },
   {
@@ -371,24 +399,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.649746192893401\n",
+      "Accuracy: 0.6683673469387755\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        buồn       0.67      0.76      0.71        74\n",
-      "         vui       0.74      0.58      0.65        59\n",
-      "  yêu thương       0.57      0.59      0.58        64\n",
+      "        buồn       0.70      0.74      0.72        77\n",
+      "         vui       0.70      0.56      0.63        55\n",
+      "  yêu thương       0.61      0.67      0.64        64\n",
       "\n",
-      "    accuracy                           0.65       197\n",
-      "   macro avg       0.66      0.64      0.65       197\n",
-      "weighted avg       0.66      0.65      0.65       197\n",
+      "    accuracy                           0.67       196\n",
+      "   macro avg       0.67      0.66      0.66       196\n",
+      "weighted avg       0.67      0.67      0.67       196\n",
       "\n",
       "Mô hình đã được lưu tại: ../model/random_forest_model.pkl\n"
      ]
@@ -399,17 +427,17 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
-    "data = pd.read_csv('../data/tfidf_lsa_lyric.csv')\n",
-    "data = data.dropna()\n",
-    "# Tách dữ liệu thành features và labels\n",
-    "X = data.drop(columns=['label'])\n",
-    "y = data['label']\n",
+    "data_train = pd.read_csv('../data/train_data.csv')\n",
+    "data_test = pd.read_csv('../data/test_data.csv')\n",
+    "X_train = data_train.drop(columns=['label'])\n",
+    "X_test = data_test.drop(columns=['label'])\n",
     "\n",
-    "# Chia dữ liệu thành tập huấn luyện và tập kiểm tra\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,  random_state=45)\n",
+    "y_train = data_train['label']\n",
+    "y_test = data_test['label']\n",
+    "\n",
     "\n",
     "# Huấn luyện mô hình Random Forest\n",
-    "rf_model = RandomForestClassifier(bootstrap= True, max_depth= None, min_samples_leaf= 1, min_samples_split= 10, n_estimators= 200)\n",
+    "rf_model = RandomForestClassifier(bootstrap= True, max_depth= 10, min_samples_leaf= 4, min_samples_split= 10, n_estimators= 200)\n",
     "rf_model.fit(X_train, y_train)\n",
     "\n",
     "# Dự đoán trên tập kiểm tra\n",
