thich thi update

--- a/data/process.ipynb
+++ b/data/process.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "# Đọc dữ liệu từ file CSV\n",
-    "file_path = '../data/lyric.csv'\n",
+    "file_path = 'lyric.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Xác định cột chứa lời bài hát\n",
@@ -59,7 +59,7 @@
     "df.columns = ['index','name_song','lyric','label']\n",
     "df.drop(['index'], axis=1,inplace=True)\n",
     "\n",
-    "processed_path = '../data/processed_data.csv'\n",
+    "processed_path = 'processed_data.csv'\n",
     "df.to_csv(processed_path, index = False)\n",
     "\n",
     "# Chuyển văn bản thành vector TF-IDF\n",
@@ -67,7 +67,7 @@
     "X_tfidf = tfidf_vectorizer.fit_transform(df['lyric'])\n",
     "\n",
     "# Lưu TF-IDF vectorizer\n",
-    "tfidf_vectorizer_path = '../model/tfidf_vectorizer.pkl'\n",
+    "tfidf_vectorizer_path = 'tfidf_vectorizer.pkl'\n",
     "joblib.dump(tfidf_vectorizer, tfidf_vectorizer_path)\n",
     "print(f\"TF-IDF Vectorizer đã được lưu tại: {tfidf_vectorizer_path}\")\n",
     "\n",
@@ -80,7 +80,7 @@
     "X_lsa = lsa.fit_transform(X_tfidf)\n",
     "\n",
     "# Lưu mô hình LDA\n",
-    "lsa_model_path = '../model/lsa_model.pkl'\n",
+    "lsa_model_path = 'lsa_model.pkl'\n",
     "joblib.dump(lsa, lsa_model_path)\n",
     "print(f\"LSA Model đã được lưu tại: {lsa_model_path}\")\n",
     "\n",
@@ -93,9 +93,109 @@
     "df_tfidf_lsa['label'] = df['label']\n",
     "\n",
     "# Lưu dữ liệu đã xử lý vào file CSV\n",
-    "output_path = '../data/tfidf_lsa_lyric.csv'\n",
+    "output_path = 'tfidf_lsa_lyric.csv'\n",
     "df_tfidf_lsa.to_csv(output_path, index=False)\n",
     "print(f\"Dữ liệu TF-IDF và LSA đã được lưu tại: {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tính toán TF-IDF (Thủ công không dùng sklearn)\n",
+    "def compute_tf_idf(corpus):\n",
+    "    # Tokenize lời bài hát thành các từ riêng lẻ\n",
+    "    tokenized_corpus = [doc.split() for doc in corpus]\n",
+    "\n",
+    "    # Tính TF (Term Frequency)\n",
+    "    term_frequencies = []\n",
+    "    for tokens in tokenized_corpus:\n",
+    "        tf = {}\n",
+    "        for word in tokens:\n",
+    "            tf[word] = tf.get(word, 0) + 1\n",
+    "        term_frequencies.append(tf)\n",
+    "\n",
+    "    # Tính DF (Document Frequency)\n",
+    "    df = {}\n",
+    "    for tf in term_frequencies:\n",
+    "        for word in tf.keys():\n",
+    "            df[word] = df.get(word, 0) + 1\n",
+    "\n",
+    "    # Tính IDF (Inverse Document Frequency)\n",
+    "    total_docs = len(corpus)\n",
+    "    idf = {word: np.log(total_docs / df[word]) for word in df}\n",
+    "\n",
+    "    # Tính TF-IDF\n",
+    "    tf_idf = []\n",
+    "    for tf in term_frequencies:\n",
+    "        tf_idf_doc = {word: tf[word] * idf[word] for word in tf}\n",
+    "        tf_idf.append(tf_idf_doc)\n",
+    "\n",
+    "    return tf_idf, idf\n",
+    "\n",
+    "# Tạo ma trận TF-IDF\n",
+    "tf_idf_values, idf = compute_tf_idf(df[lyrics_column].astype(str).tolist())\n",
+    "\n",
+    "# Chuyển đổi TF-IDF thành ma trận dạng số\n",
+    "unique_words = list(idf.keys())\n",
+    "tf_idf_matrix = []\n",
+    "for tf_idf_doc in tf_idf_values:\n",
+    "    row = [tf_idf_doc.get(word, 0) for word in unique_words]\n",
+    "    tf_idf_matrix.append(row)\n",
+    "\n",
+    "tf_idf_matrix = np.array(tf_idf_matrix)\n",
+    "\n",
+    "# Áp dụng LDA thủ công để trích xuất chủ đề\n",
+    "def lda(matrix, K, iterations=100, alpha=0.1, beta=0.01):\n",
+    "    M, V = matrix.shape  # Số tài liệu và số từ\n",
+    "    # Khởi tạo ngẫu nhiên chủ đề cho mỗi từ trong mỗi tài liệu\n",
+    "    z = np.random.randint(0, K, size=(M, V))\n",
+    "    \n",
+    "    # Đếm số lượng từ trong các chủ đề và tài liệu\n",
+    "    ndk = np.zeros((M, K))  # Số từ trong mỗi tài liệu thuộc mỗi chủ đề\n",
+    "    nkw = np.zeros((K, V))  # Số từ trong mỗi chủ đề\n",
+    "    nk = np.zeros(K)        # Tổng số từ trong mỗi chủ đề\n",
+    "\n",
+    "    for m in range(M):\n",
+    "        for v in range(V):\n",
+    "            topic = z[m, v]\n",
+    "            ndk[m, topic] += matrix[m, v]\n",
+    "            nkw[topic, v] += matrix[m, v]\n",
+    "            nk[topic] += matrix[m, v]\n",
+    "\n",
+    "    for it in range(iterations):\n",
+    "        for m in range(M):\n",
+    "            for v in range(V):\n",
+    "                if matrix[m, v] == 0:\n",
+    "                    continue\n",
+    "\n",
+    "                topic = z[m, v]\n",
+    "                ndk[m, topic] -= matrix[m, v]\n",
+    "                nkw[topic, v] -= matrix[m, v]\n",
+    "                nk[topic] -= matrix[m, v]\n",
+    "\n",
+    "                # Tính xác suất của mỗi chủ đề\n",
+    "                p_z = (ndk[m, :] + alpha) * (nkw[:, v] + beta) / (nk + V * beta)\n",
+    "                p_z /= p_z.sum()\n",
+    "\n",
+    "                # Lấy chủ đề mới theo phân phối p_z\n",
+    "                new_topic = np.random.choice(K, p=p_z)\n",
+    "                z[m, v] = new_topic\n",
+    "\n",
+    "                ndk[m, new_topic] += matrix[m, v]\n",
+    "                nkw[new_topic, v] += matrix[m, v]\n",
+    "                nk[new_topic] += matrix[m, v]\n",
+    "\n",
+    "    return ndk, nkw\n",
+    "\n",
+    "K = 10  # Số chủ đề\n",
+    "ndk, nkw = lda(tf_idf_matrix, K)\n",
+    "\n",
+    "# Tạo DataFrame với các chủ đề cho mỗi tài liệu\n",
+    "topic_columns = [f'topic_{i+1}' for i in range(K)]\n",
+    "df_topics = pd.DataFrame(ndk, columns=topic_columns)"
    ]
   },
   {
@@ -146,13 +246,13 @@
     "    test_data = data.loc[test_indices]\n",
     "    \n",
     "    # Lưu dữ liệu ra file CSV\n",
-    "    train_data.to_csv('../data/train_data.csv', index=False)\n",
-    "    test_data.to_csv('../data/test_data.csv', index=False)\n",
+    "    train_data.to_csv('train_data.csv', index=False)\n",
+    "    test_data.to_csv('test_data.csv', index=False)\n",
     "    \n",
     "    return train_data, test_data\n",
     "\n",
     "# Đọc dữ liệu từ file CSV\n",
-    "file_path = '../data/tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
+    "file_path = 'tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
     "\n",
     "try:\n",
     "    df_tfidf_lsa = pd.read_csv(file_path)\n",
@@ -206,8 +306,8 @@
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
     "\n",
-    "data_train = pd.read_csv('../data/train_data.csv')\n",
-    "data_test = pd.read_csv('../data/test_data.csv')\n",
+    "data_train = pd.read_csv('train_data.csv')\n",
+    "data_test = pd.read_csv('test_data.csv')\n",
     "X_train = data_train.drop(columns=['label'])\n",
     "X_test = data_test.drop(columns=['label'])\n",
     "\n",
@@ -249,7 +349,7 @@
     "\n",
     "# Lưu mô hình tốt nhất nếu cần thiết\n",
     "import joblib\n",
-    "model_path = '../model/best_randomforest_model.pkl'\n",
+    "model_path = 'best_randomforest_model.pkl'\n",
     "joblib.dump(best_rf, model_path)\n",
     "print(f\"Mô hình tốt nhất đã được lưu tại: {model_path}\")\n"
    ]
@@ -284,8 +384,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
-    "data_train = pd.read_csv('../data/train_data.csv')\n",
-    "data_test = pd.read_csv('../data/test_data.csv')\n",
+    "data_train = pd.read_csv('train_data.csv')\n",
+    "data_test = pd.read_csv('test_data.csv')\n",
     "X_train = data_train.drop(columns=['label'])\n",
     "X_test = data_test.drop(columns=['label'])\n",
     "\n",
@@ -308,7 +408,7 @@
     "\n",
     "# Lưu mô hình nếu cần thiết\n",
     "import joblib\n",
-    "model_path = '../model/random_forest_model.pkl'\n",
+    "model_path = 'random_forest_model.pkl'\n",
     "joblib.dump(rf_model, model_path)\n",
     "print(f\"Mô hình đã được lưu tại: {model_path}\")\n"
    ]
@@ -361,7 +461,7 @@
     "        cleaned_text = ' '.join([word for word in words if word not in stop_words])\n",
     "        return cleaned_text\n",
     "    return ' '.join(words)\n",
-    "model_path = '../model/random_forest_model.pkl'\n",
+    "model_path = 'random_forest_model.pkl'\n",
     "best_rf = joblib.load(model_path)\n",
     "print(\"Mô hình đã được tải thành công.\")\n",
     "\n",
@@ -374,7 +474,7 @@
     "\n",
     "\n",
     "# Chuyển văn bản thành vector TF-IDF\n",
-    "tfidf_vectorizer = joblib.load('../model/fidf_vectorizer.pkl')\n",
+    "tfidf_vectorizer = joblib.load('tfidf_vectorizer.pkl')\n",
     "\n",
     "new_tfidf = tfidf_vectorizer.transform(df_test['lyric'])\n",
     "\n",
@@ -382,7 +482,7 @@
     "print(\"Shape of TF-IDF matrix:\", new_tfidf.shape)\n",
     "\n",
     "# Giảm chiều dữ liệu bằng LSA (SVD)\n",
-    "lda_model = joblib.load('../model/lsa_model.pkl')\n",
+    "lda_model = joblib.load('lsa_model.pkl')\n",
     "\n",
     "new_lda = lda_model.transform(new_tfidf)\n",
     "print(new_lda.shape)\n",
