--- a/src/process.ipynb
+++ b/src/process.ipynb
@@ -27,72 +27,71 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "\n",
-    "# Đọc dữ liệu từ file CSV\n",
+    "# Read data from csv file\n",
     "file_path = '../data/lyric.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "# Xác định cột chứa lời bài hát\n",
-    "lyrics_column = 'lyric'  # Thay bằng tên cột cụ thể nếu khác\n",
+    "# Lyrics data columns\n",
+    "lyrics_column = 'lyric'  \n",
     "\n",
     "# Load the Vietnamese stopwords\n",
     "with open('vietnamese-stopwords.txt', 'r', encoding='utf-8') as file:\n",
     "    stop_words = set(file.read().splitlines())\n",
     "\n",
     "def clean_text(text):\n",
-    "    # 1. Loại bỏ ký tự đặc biệt\n",
-    "    text = re.sub(r'[^\\w\\s]', ' ', text)  # Thay thế ký tự đặc biệt bằng khoảng trắng\n",
-    "    text = re.sub(r'\\d+', ' ', text)  # Loại bỏ chữ số\n",
-    "    text = re.sub(r'\\s+', ' ', text).strip()  # Loại bỏ khoảng trắng thừa\n",
+    "    # 1. Delete \n",
+    "    text = re.sub(r'[^\\w\\s]', ' ', text)  # Replace by whitespace\n",
+    "    text = re.sub(r'\\d+', ' ', text)  # Delete numbers\n",
+    "    text = re.sub(r'\\s+', ' ', text).strip()  # Delete whitespaces\n",
     "\n",
-    "    # 2. Chuyển về chữ thường\n",
+    "    # 2. Lowercase\n",
     "    text = text.lower()\n",
     "\n",
-    "    # 3. Loại bỏ stopword\n",
+    "    # 3. Delete stopword\n",
     "    if isinstance(text, str):  # Ensure text is a string\n",
     "        words = text.split()\n",
     "        cleaned_text = ' '.join([word for word in words if word not in stop_words])\n",
     "        return cleaned_text\n",
     "    return ' '.join(words)\n",
     "\n",
-    "# Áp dụng hàm xử lý lên cột chứa lời bài hát\n",
+    "# Apply the process function to the data\n",
     "df[lyrics_column] = df[lyrics_column].astype(str).apply(clean_text)\n",
     "df.columns = ['index','name_song','lyric','label']\n",
     "df.drop(['index'], axis=1,inplace=True)\n",
-    "\n",
+    "# Export processed data\n",
     "processed_path = '../data/processed_data.csv'\n",
     "df.to_csv(processed_path, index = False)\n",
     "\n",
-    "# Chuyển văn bản thành vector TF-IDF\n",
-    "tfidf_vectorizer = TfidfVectorizer(max_features=5000)  # Bạn có thể điều chỉnh số lượng đặc trưng\n",
+    "# Vector TF-IDF\n",
+    "tfidf_vectorizer = TfidfVectorizer(max_features=5000)  \n",
     "X_tfidf = tfidf_vectorizer.fit_transform(df['lyric'])\n",
     "\n",
-    "# Lưu TF-IDF vectorizer\n",
+    "# Save TF-IDF vectorizer\n",
     "tfidf_vectorizer_path = '../model/tfidf_vectorizer.pkl'\n",
     "joblib.dump(tfidf_vectorizer, tfidf_vectorizer_path)\n",
     "print(f\"TF-IDF Vectorizer đã được lưu tại: {tfidf_vectorizer_path}\")\n",
     "\n",
-    "# In thông tin TF-IDF\n",
+    "# Print TF-IDF shape\n",
     "print(\"Shape of TF-IDF matrix:\", X_tfidf.shape)\n",
     "\n",
-    "# Giảm chiều dữ liệu bằng LSA (SVD)\n",
-    "num_topics = 25  # Số lượng chủ đề bạn muốn giữ lại\n",
+    "# LSA (SVD)\n",
+    "num_topics = 25  # number of topics\n",
     "lsa = TruncatedSVD(n_components=num_topics, random_state=42)\n",
     "X_lsa = lsa.fit_transform(X_tfidf)\n",
     "\n",
-    "# Lưu mô hình LDA\n",
+    "# save the lsa model\n",
     "lsa_model_path = '../model/lsa_model.pkl'\n",
     "joblib.dump(lsa, lsa_model_path)\n",
     "print(f\"LSA Model đã được lưu tại: {lsa_model_path}\")\n",
     "\n",
-    "# In thông tin về các thành phần chính\n",
     "print(\"Shape of LSA-transformed matrix:\", X_lsa.shape)\n",
     "print(\"Explained variance ratio:\", lsa.explained_variance_ratio_.sum())\n",
     "\n",
-    "# Lưu TF-IDF và LSA vào DataFrame\n",
+    "# Apply TF-IDF and LSA to DataFrame\n",
     "df_tfidf_lsa = pd.DataFrame(X_lsa, columns=[f\"Topic{i+1}\" for i in range(num_topics)])\n",
     "df_tfidf_lsa['label'] = df['label']\n",
     "\n",
-    "# Lưu dữ liệu đã xử lý vào file CSV\n",
+    "# Save the results\n",
     "output_path = '../data/tfidf_lsa_lyric.csv'\n",
     "df_tfidf_lsa.to_csv(output_path, index=False)\n",
     "print(f\"Dữ liệu TF-IDF và LSA đã được lưu tại: {output_path}\")"
@@ -108,67 +107,65 @@
     "import pandas as pd\n",
     "\n",
     "def stratified_train_test_split(data, label_col, test_size=0.2, random_state=None):\n",
-    "    # Kiểm tra sự tồn tại của cột nhãn\n",
+    "    # Check if the label column exists\n",
     "    if label_col not in data.columns:\n",
-    "        raise ValueError(f\"Cột '{label_col}' không tồn tại trong dữ liệu.\")\n",
+    "        raise ValueError(f\"Column '{label_col}' does not exist in the data.\")\n",
     "    \n",
-    "    # Thiết lập giá trị random seed nếu cần\n",
+    "    # Set random seed if needed\n",
     "    if random_state is not None:\n",
     "        np.random.seed(random_state)\n",
     "    \n",
-    "    # Lấy danh sách các nhãn và tỷ lệ của chúng\n",
+    "    # Get the list of labels and their proportions\n",
     "    label_counts = data[label_col].value_counts(normalize=True)\n",
     "    \n",
-    "    # Tạo danh sách các chỉ số của tập dữ liệu\n",
+    "    # Create a list of indices for the dataset\n",
     "    indices = data.index.tolist()\n",
     "    \n",
-    "    # Khởi tạo danh sách cho các chỉ số của train và test\n",
+    "    # Initialize lists for the train and test indices\n",
     "    train_indices = []\n",
     "    test_indices = []\n",
     "    \n",
-    "    # Chia dữ liệu theo tỷ lệ nhãn\n",
+    "    # Split the data based on label proportions\n",
     "    for label, proportion in label_counts.items():\n",
-    "        # Lấy các chỉ số của mẫu có nhãn tương ứng\n",
+    "        # Get the indices of samples with the corresponding label\n",
     "        label_indices = data[data[label_col] == label].index.tolist()\n",
     "        \n",
-    "        # Xác định số lượng mẫu cần thiết cho tập test\n",
+    "        # Determine the number of samples required for the test set\n",
     "        test_count = int(len(label_indices) * test_size)\n",
     "        \n",
-    "        # Xáo trộn chỉ số của nhãn này\n",
+    "        # Shuffle the indices of this label\n",
     "        np.random.shuffle(label_indices)\n",
     "        \n",
-    "        # Tách ra tập train và test\n",
+    "        # Split into train and test sets\n",
     "        test_indices += label_indices[:test_count]\n",
     "        train_indices += label_indices[test_count:]\n",
     "    \n",
-    "    # Lấy tập dữ liệu train và test\n",
+    "    # Get the train and test datasets\n",
     "    train_data = data.loc[train_indices]\n",
     "    test_data = data.loc[test_indices]\n",
     "    \n",
-    "    # Lưu dữ liệu ra file CSV\n",
+    "    # Save the datasets to CSV files\n",
     "    train_data.to_csv('../data/train_data.csv', index=False)\n",
     "    test_data.to_csv('../data/test_data.csv', index=False)\n",
     "    \n",
     "    return train_data, test_data\n",
     "\n",
-    "# Đọc dữ liệu từ file CSV\n",
-    "file_path = '../data/tfidf_lsa_lyric.csv'  # File chứa dữ liệu đầu vào\n",
+    "# Read data from a CSV file\n",
+    "file_path = '../data/tfidf_lsa_lyric.csv'  # File containing the input data\n",
     "\n",
     "try:\n",
     "    df_tfidf_lsa = pd.read_csv(file_path)\n",
     "except FileNotFoundError:\n",
-    "    print(\"File không tồn tại. Vui lòng kiểm tra đường dẫn.\")\n",
+    "    print(\"File does not exist. Please check the path.\")\n",
     "    exit()\n",
     "\n",
-    "# Tách dữ liệu thành train và test\n",
+    "# Split the data into train and test\n",
     "train_df, test_df = stratified_train_test_split(\n",
     "    data=df_tfidf_lsa,\n",
-    "    label_col='label',  # Đảm bảo cột 'label' đã tồn tại\n",
+    "    label_col='label',  # Ensure the 'label' column exists\n",
     "    test_size=0.2,\n",
     "    random_state=48\n",
-    ")\n",
-    "\n",
-    "\n"
+    ")\n"
    ]
   },
   {
@@ -205,7 +202,7 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
-    "\n",
+    "# Read training and test data\n",
     "data_train = pd.read_csv('../data/train_data.csv')\n",
     "data_test = pd.read_csv('../data/test_data.csv')\n",
     "X_train = data_train.drop(columns=['label'])\n",
@@ -214,7 +211,7 @@
     "y_train = data_train['label']\n",
     "y_test = data_test['label']\n",
     "\n",
-    "# Thiết lập tham số cho GridSearch\n",
+    "# Set parameters for GridSearch\n",
     "param_grid = {\n",
     "    'n_estimators': [50, 100, 200],\n",
     "    'max_depth': [None, 10, 20, 30],\n",
@@ -224,34 +221,34 @@
     "    'max_features': ['sqrt', 'log2', None]\n",
     "}\n",
     "\n",
-    "# Khởi tạo mô hình RandomForestClassifier\n",
+    "# Initialize the RandomForestClassifier model\n",
     "rf = RandomForestClassifier(random_state=42)\n",
     "\n",
-    "# Thiết lập GridSearchCV\n",
+    "# Set up GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=rf, param_grid=param_grid, cv=3, scoring='accuracy', n_jobs=-1, verbose=2)\n",
     "\n",
-    "# Huấn luyện mô hình grid search\n",
+    "# Train the model with grid search\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# In kết quả tốt nhất\n",
+    "# Print the best parameters and best score\n",
     "print(\"Best parameters found:\", grid_search.best_params_)\n",
     "print(\"Best accuracy score:\", grid_search.best_score_)\n",
     "\n",
-    "# Dự đoán trên tập kiểm tra với mô hình tốt nhất\n",
+    "# Make predictions on the test set using the best model\n",
     "best_rf = grid_search.best_estimator_\n",
     "y_pred = best_rf.predict(X_test)\n",
     "\n",
-    "# Đánh giá mô hình\n",
+    "# Evaluate the model\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Test Accuracy:\", accuracy)\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# Lưu mô hình tốt nhất nếu cần thiết\n",
+    "# Save the best model if needed\n",
     "import joblib\n",
     "model_path = '../model/best_randomforest_model.pkl'\n",
     "joblib.dump(best_rf, model_path)\n",
-    "print(f\"Mô hình tốt nhất đã được lưu tại: {model_path}\")\n"
+    "print(f\"The best model has been saved at: {model_path}\")\n"
    ]
   },
   {
@@ -284,6 +281,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
+    "# Read training and test data\n",
     "data_train = pd.read_csv('../data/train_data.csv')\n",
     "data_test = pd.read_csv('../data/test_data.csv')\n",
     "X_train = data_train.drop(columns=['label'])\n",
@@ -292,25 +290,25 @@
     "y_train = data_train['label']\n",
     "y_test = data_test['label']\n",
     "\n",
-    "\n",
-    "# Huấn luyện mô hình Random Forest\n",
-    "rf_model = RandomForestClassifier(bootstrap= True, max_depth= 10, min_samples_leaf= 4, min_samples_split= 10, n_estimators= 200, random_state=44)\n",
+    "# Train the Random Forest model\n",
+    "rf_model = RandomForestClassifier(bootstrap=True, max_depth=10, min_samples_leaf=4, \n",
+    "                                  min_samples_split=10, n_estimators=200, random_state=44)\n",
     "rf_model.fit(X_train, y_train)\n",
     "\n",
-    "# Dự đoán trên tập kiểm tra\n",
+    "# Make predictions on the test set\n",
     "y_pred = rf_model.predict(X_test)\n",
     "\n",
-    "# Đánh giá mô hình\n",
+    "# Evaluate the model\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# Lưu mô hình nếu cần thiết\n",
+    "# Save the model if needed\n",
     "import joblib\n",
     "model_path = '../model/random_forest_model.pkl'\n",
     "joblib.dump(rf_model, model_path)\n",
-    "print(f\"Mô hình đã được lưu tại: {model_path}\")\n"
+    "print(f\"The model has been saved at: {model_path}\")\n"
    ]
   },
   {
